--- a/crud/crud.html
+++ b/crud/crud.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-    <table summary="Crud operation">
-        <th></th>
+    <table>
+         <caption>Crud Operation</caption>
+        <th id="tablehead"></th>
         <tr>
             <td>
                 <form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
@@ -49,7 +50,8 @@
             </td>
             <td>
                 <div class="scrolllist">
-                <table class="list" id="employeeList" summary="Data">
+                <table class="list" id="employeeList">
+                    <caption>List of Employees</caption>
                     <thead>
                         <tr>
                             <th id="data">Full Name</th>
